data/derived/comb/progs/unify/prog1813.ml.out
Characters 459-482:
  -> factorial( eval( e', x, y ), 1 )
              ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type float
